Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102001

error C2220: the following warning is treated as an error qserialportinfo.cpp(131): warning C4996: 'QScopedPointer<QSerialPortInfoPrivate,QSerialPortInfoPrivateDeleter>::swap': Use std::unique_ptr instead of QScopedPointer.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 6.4.0 Beta1
    • 6.4.0 FF
    • Serial Port
    • None
    • 87a974259d (qt/qtserialport/dev) 87a974259d (qt/qtserialport/6.4) 87a974259d (qt/tqtc-qtserialport/6.4)

      error C2220: the following warning is treated as an error
      agent:2022/03/23 20:59:13 build.go:394: \Users\qt\work\qt\qtserialport\src\serialport\qserialportinfo.cpp(131): warning C4996: 'QScopedPointer<QSerialPortInfoPrivate,QSerialPortInfoPrivateDeleter>::swap': Use std::unique_ptr instead of QScopedPointer.
      

      Build log: https://testresults.qt.io/logs/qt/qtserialport/face8aee5fb4752d73421386dd9bed33a3da0507/WindowsWindows_10_21H2x86_64WindowsWindows_10_21H2x86_64MSVC2019qtci-windows-10_21H2-x86_64-51-a94811Conan_DebugAndRelease_Sccache_WarningsAreErrors/7598e5a4898cd69a76fe00d33361f2996a531f2f/build_1648076107/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtserialport/tasks/1648076105

      Tested changes (refs/builds/qtci/dev/1648068970):

      https://codereview.qt-project.org/c/qt/qtserialport/+/402211/2 Update dependencies on 'dev' in qt/qtserialport

        For Gerrit Dashboard: QTBUG-102001
        # Subject Branch Project Status CR V

            laknoll Lars Knoll
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes