Fix QScopedPointer::swap deprecation warning

By switching to unique_ptr.

Also remove the QSerialPortInfoPrivateDeleter since it's not needed.

Fixes: QTBUG-102001
Change-Id: I48d7b5982a28b57085883f127ba09d1cae94b196
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>