src/serialport/qserialportinfo_p.h
@@ -77,14 +77,6 @@ public:
     bool hasProductIdentifier = false;
 };
 
-class QSerialPortInfoPrivateDeleter
-{
-public:
-    static void cleanup(QSerialPortInfoPrivate *p) {
-        delete p;
-    }
-};
-
 QT_END_NAMESPACE
 
 #endif // QSERIALPORTINFO_P_H
